# disaster-mesh

./: .gitattributes  .gitignore  CHANGELOG.md  CONTENTS.md  Cargo.toml  FILELIST.txt  FILE_SHA256SUMS.txt  IMPLEMENTATION_CHECKLIST.md  README.md  SECURITY.md  SESSION_HANDOFF.md  SUPPORT.md  VALIDATION_REPORT.md  deny.toml  rust-toolchain.toml
.github/workflows/: android.yml  commercial-release-gate.yml  pages.yml  release-evidence.yml  rust.yml  supply-chain.yml
apps/android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts  gradle.lockfile  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/core-bridge/: build.gradle.kts  gradle.lockfile
apps/android/domain/: build.gradle.kts
apps/android/feature-checkin/: build.gradle.kts
apps/android/feature-contacts/: build.gradle.kts  gradle.lockfile
apps/android/feature-diagnostics/: build.gradle.kts
apps/android/feature-home/: build.gradle.kts  gradle.lockfile
apps/android/feature-relay-status/: build.gradle.kts
apps/android/feature-settings/: gradle.lockfile
apps/android/gradle/: libs.versions.toml  verification-metadata.xml
apps/android/service-relay/: build.gradle.kts  gradle.lockfile
apps/android/service-relay/src/main/: AndroidManifest.xml
apps/android/test-fixtures/: gradle.lockfile
apps/android/transport-ble/: build.gradle.kts  gradle.lockfile
archive/: FULL_IMPLEMENTATION_DESIGN_v1.0.md  design-review-v1.0.1.md  design_v0.1.md
contracts/: android_interfaces.kt  protocol_constants.toml  rust_facade.rs  state_codes.toml
core/: README.md
core/mesh-bundle/: Cargo.toml
core/mesh-bundle/src/: lib.rs
core/mesh-codec/: Cargo.toml
core/mesh-codec/src/: base32.rs  ble.rs  cbor.rs  control.rs  lib.rs
core/mesh-codec/tests/: cddl_contracts.rs
core/mesh-crypto/: Cargo.toml
core/mesh-crypto/src/: contact.rs  dme.rs  identity.rs  lib.rs  local_envelope.rs  noise.rs  replay.rs
core/mesh-engine/: Cargo.toml
core/mesh-engine/src/: control.rs  direct_transfer.rs  lib.rs  multihop.rs  runtime.rs  secure_bundle.rs
core/mesh-ffi/: Cargo.toml  uniffi.toml
core/mesh-ffi/src/: lib.rs
core/mesh-routing/: Cargo.toml
core/mesh-routing/src/: lib.rs
core/mesh-sim/: Cargo.toml
core/mesh-sim/src/: lib.rs
core/mesh-store/: Cargo.toml
core/mesh-store/src/: contact_store.rs  health.rs  identity_store.rs  lib.rs  routing_store.rs  transfer_store.rs
core/mesh-types/: Cargo.toml
core/mesh-types/src/: domain.rs  generated_contracts.rs  lib.rs
docs/: 00-product-requirements.md  01-system-architecture.md  02-domain-model.md  03-protocol-dme-v1.md  04-protocol-ble-cla-v1.md  05-routing-and-queue.md  06-security-and-threat-model.md  07-storage-schema.md  08-rust-core-contract.md  09-android-implementation.md  10-state-machines.md  11-testing-and-acceptance.md  12-release-and-operations.md  13-development-goals.md  14-known-limitations.md  15-references.md  16-design-review-v1.0.1.md  16-design-review-v2.0.0-rc1.md  17-commercial-readiness.md  18-privacy-and-data-governance.md  19-operational-readiness.md  20-security-verification-plan.md  21-requirements-traceability.md  22-go-live-checklist.md  23-android-emulator-testing.md  dependency-review-template.md  dependency-review.md  index.html
docs/adr/: ADR-001-android-first.md  ADR-002-rust-owns-protocol-db.md  ADR-003-bpv7-profile.md  ADR-004-message-security.md  ADR-005-ble-gatt.md  ADR-006-spray-and-wait.md  ADR-007-token-grant-escrow.md  ADR-008-endpoint-only-control.md  ADR-009-authenticated-hop-limit.md  ADR-010-control-message-terminal-rules.md  ADR-011-persisted-replay-bitmap.md  ADR-012-exact-ble-wire-format.md  ADR-013-platform-command-correlation.md  ADR-014-local-encryption-envelope.md  ADR-015-commercial-release-governance.md  ADR-016-no-delivery-guarantee.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/ko-KR/: full_description.txt  short_description.txt
fdroid/: org.disastermesh.android.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ble_frames.rs  ble_reassembly.rs  bundle.rs  cbor.rs  control.rs  crypto_envelopes.rs
policies/: PRIVACY_POLICY_DRAFT.md  STORE_DISCLOSURE_CHECKLIST.md
prompts/: goal-00-bootstrap.md  goal-00b-contract-freeze.md  goal-01-protocol-core.md  goal-02-security.md  goal-03-android-direct-ble.md  goal-04-multihop.md  goal-05-disaster-product.md  goal-06-hardening.md  goal-07-commercial-release.md
release/: INCIDENT_RESPONSE_RUNBOOK.md  README.md  ROLLOUT_RUNBOOK.md  SIGNING_RUNBOOK.md  readiness-status.json  release-manifest.schema.json
release/evidence/: beta-source-sbom.cdx.json
reports/: compatibility-matrix.md  emulator-smoke-api36.md  field-exercise.md  goal-05-acceptance.md  goal-06-beta-gates.md  goal-07-commercial-gates.md  legal-safety-review.md  masvs-evidence-map.md  migration-rollback.md
reports/evidence/emulator-api36/: result.json
schemas/: schema_invariants.sql  sqlite_v1.sql
spec/: ble-control-v1.cddl  ble-wire-v1.md  contact-card-v1.cddl  disaster-routing-block-v1.cddl  dme-aad-v1.cddl  dme-v1.cddl
test-vectors/: README.md  cases.json  cases.schema.json  contact-card-v1.cbor.hex  contact-card-v1.json  direct-text-aad.hex  direct-text-bpv7.hex  direct-text-ciphertext.cbor.hex  direct-text-hpke.enc.hex  direct-text-plaintext.cbor.hex  direct-text-plaintext.json  goal-2-manifest.json  manifest.schema.json  receipt-bpv7.hex
test-vectors/invalid/: contact-card-bad-crc.txt  contact-card-wrong-signature.cbor.hex  direct-text-truncated.cbor.hex  direct-text-wrong-aad-bpv7.hex  direct-text-wrong-signature-plaintext.cbor.hex
tools/: check_policy_consistency.py  check_release_readiness.py  generate_contracts.py  generate_sbom.py  generate_uniffi_bindings.ps1  generate_uniffi_bindings.sh  setup_android_emulator.ps1  smoke_android_emulator.ps1  validate_design_bundle.py  validate_release_manifest.py  verify_android_architecture.py  verify_android_manifest.py
tools/tests/: test_release_tools.py
(+46 files in other folders)
