[package]
name = "mesh-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DisasterMesh codec boundary"

[dependencies]
mesh-types.workspace = true
crc32c.workspace = true

[dev-dependencies]
cddl-cat.workspace = true
proptest.workspace = true

[lints]
workspace = true
