[package]
name = "mesh-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DisasterMesh cryptography adapter boundary"

[dependencies]
mesh-types.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
