[package]
name = "mesh-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DisasterMesh cryptography adapter boundary"

[dependencies]
mesh-types.workspace = true
mesh-codec.workspace = true
chacha20poly1305.workspace = true
crc32c.workspace = true
ed25519-dalek.workspace = true
hkdf.workspace = true
hpke.workspace = true
rand_core.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
