[package]
name = "mesh-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DisasterMesh engine boundary"

[dependencies]
mesh-types.workspace = true
mesh-routing.workspace = true
mesh-store.workspace = true

[lints]
workspace = true
