[package]
name = "mesh-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DisasterMesh engine boundary"

[dependencies]
mesh-types.workspace = true
mesh-bundle.workspace = true
mesh-codec.workspace = true
mesh-crypto.workspace = true
mesh-routing.workspace = true
mesh-store.workspace = true
rand_core.workspace = true
sha2.workspace = true

[lints]
workspace = true
