[package]
name = "mesh-routing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DisasterMesh routing decision boundary"

[dependencies]
mesh-types.workspace = true
mesh-bundle.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
