[package]
name = "mesh-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DisasterMesh simulation boundary"

[dependencies]
mesh-engine.workspace = true
mesh-routing.workspace = true
mesh-types.workspace = true

[lints]
workspace = true
