[package]
name = "mesh-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "DisasterMesh persistence boundary"

[dependencies]
mesh-types.workspace = true
mesh-bundle.workspace = true
mesh-crypto.workspace = true
mesh-routing.workspace = true
rusqlite.workspace = true
sha2.workspace = true

[dev-dependencies]

[lints]
workspace = true
